--- a/doc/Changelog
+++ b/doc/Changelog
@@ -1,3 +1,8 @@
+2010-09-03: 5.0.14
+==================
+
+* Fix a bug with current_thread (only exists >= Python 2.6) (patch from Pexego)
+
 2010-09-03: 5.0.13
 ==================
 
