--- a/bin/addons/base/i18n/pt.po
+++ b/bin/addons/base/i18n/pt.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.0\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-07-30 13:35+0000\n"
-"Last-Translator: DReis <Unknown>\n"
+"PO-Revision-Date: 2011-08-02 16:54+0000\n"
+"Last-Translator: Paulo Borges <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-07-31 05:15+0000\n"
-"X-Generator: Launchpad (build 13405)\n"
+"X-Launchpad-Export-Date: 2011-08-03 05:12+0000\n"
+"X-Generator: Launchpad (build 13573)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -633,7 +633,7 @@ msgstr "Oportunidades"
 #. module: base
 #: model:ir.model,name:base.model_base_language_export
 msgid "base.language.export"
-msgstr ""
+msgstr "base.language.export"
 
 #. module: base
 #: model:res.country,name:base.pg
@@ -787,7 +787,7 @@ msgstr "Categorias dependentes"
 #. module: base
 #: model:ir.model,name:base.model_ir_config_parameter
 msgid "ir.config_parameter"
-msgstr ""
+msgstr "Copy text \t ir.config_parameter"
 
 #. module: base
 #: selection:base.language.export,format:0
@@ -1648,6 +1648,7 @@ msgstr ""
 #, python-format
 msgid "A document was modified since you last viewed it (%s:%d)"
 msgstr ""
+"Um documento (%s:%d) foi modificado desde a última vez que o visualizou"
 
 #. module: base
 #: view:workflow:0
@@ -3420,6 +3421,7 @@ msgstr "Aplique para eliminar"
 #, python-format
 msgid "Cannot rename column to %s, because that column already exists!"
 msgstr ""
+"Não é possível renomear a coluna para %s, pois essa coluna já existe!"
 
 #. module: base
 #: view:ir.attachment:0
@@ -4577,7 +4579,7 @@ msgstr "Adicionar"
 #: model:ir.actions.act_window,name:base.action_view_base_module_upgrade_window
 #: model:ir.ui.menu,name:base.menu_view_base_module_upgrade
 msgid "Apply Scheduled Upgrades"
-msgstr "Aplicar actualzações agendadas"
+msgstr "Aplicar actualizações agendadas"
 
 #. module: base
 #: view:res.widget:0
