--- a/bin/addons/base/i18n/zh_CN.po
+++ b/bin/addons/base/i18n/zh_CN.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-08-14 18:05+0000\n"
-"Last-Translator: Joshua Jan <popkar77@gmail.com>\n"
+"PO-Revision-Date: 2011-08-15 12:49+0000\n"
+"Last-Translator: openerp-china.black-jack <onetimespeed@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-08-15 05:04+0000\n"
-"X-Generator: Launchpad (build 13674)\n"
+"X-Launchpad-Export-Date: 2011-08-16 04:56+0000\n"
+"X-Generator: Launchpad (build 13687)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -4202,7 +4202,7 @@ msgstr "ir.attachment"
 msgid ""
 "You cannot perform this operation. New Record Creation is not allowed for "
 "this object as this object is for reporting purpose."
-msgstr "您不能支持此操作。此对象不允许进行“创建新记录”操作，因为此对象是为报表准备的。"
+msgstr "您不能执行此操作。此对象不允许进行“创建新记录”操作，因为此对象是为报告准备的。"
 
 #. module: base
 #: view:base.language.import:0
@@ -6635,7 +6635,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.next_id_73
 #: model:ir.ui.menu,name:base.reporting_menu
 msgid "Reporting"
-msgstr "报表"
+msgstr "报告"
 
 #. module: base
 #: model:res.country,name:base.tg
