--- a/bin/addons/base/i18n/ko.po
+++ b/bin/addons/base/i18n/ko.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-addons\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-09-02 08:23+0000\n"
+"PO-Revision-Date: 2011-09-05 04:26+0000\n"
 "Last-Translator: David_Lee <Unknown>\n"
 "Language-Team: Korean <ko@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-09-03 06:12+0000\n"
+"X-Launchpad-Export-Date: 2011-09-05 06:38+0000\n"
 "X-Generator: Launchpad (build 13830)\n"
 
 #. module: base
@@ -1964,7 +1964,7 @@ msgstr ""
 #. module: base
 #: help:ir.model.fields,model:0
 msgid "The technical name of the model this field belongs to"
-msgstr ""
+msgstr "이 필드가 속한 모델의 기술적 명칭"
 
 #. module: base
 #: field:ir.actions.server,action_id:0
@@ -3054,7 +3054,7 @@ msgstr "스페인어"
 #. module: base
 #: model:res.country,name:base.gt
 msgid "Guatemala"
-msgstr ""
+msgstr "과테말라"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_workflow_form
@@ -3195,12 +3195,12 @@ msgstr ""
 #. module: base
 #: field:ir.config_parameter,key:0
 msgid "Key"
-msgstr ""
+msgstr "키"
 
 #. module: base
 #: field:res.company,rml_header:0
 msgid "RML Header"
-msgstr ""
+msgstr "RML 헤더"
 
 #. module: base
 #: field:partner.sms.send,app_id:0
