--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-09-24 06:42+0000\n"
+"PO-Revision-Date: 2011-09-25 09:57+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-09-25 04:53+0000\n"
+"X-Launchpad-Export-Date: 2011-09-26 04:53+0000\n"
 "X-Generator: Launchpad (build 14012)\n"
 
 #. module: base
@@ -4076,7 +4076,7 @@ msgstr ""
 #. module: base
 #: view:res.log:0
 msgid "Unread"
-msgstr ""
+msgstr "Оқылмаған"
 
 #. module: base
 #: field:ir.cron,doall:0
@@ -4102,7 +4102,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.uk
 msgid "United Kingdom"
-msgstr ""
+msgstr "Ұлы Британия"
 
 #. module: base
 #: view:res.config:0
@@ -4119,12 +4119,12 @@ msgstr ""
 #. module: base
 #: report:ir.module.reference.graph:0
 msgid "Object:"
-msgstr ""
+msgstr "Объекті:"
 
 #. module: base
 #: model:res.country,name:base.bw
 msgid "Botswana"
-msgstr ""
+msgstr "Ботсвана"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_partner_title_partner
@@ -4213,7 +4213,7 @@ msgstr ""
 #. module: base
 #: model:ir.ui.menu,name:base.menu_main_pm
 msgid "Project"
-msgstr ""
+msgstr "Жоба"
 
 #. module: base
 #: field:ir.ui.menu,web_icon_hover_data:0
@@ -4228,7 +4228,7 @@ msgstr ""
 #. module: base
 #: selection:ir.actions.todo,state:0
 msgid "Cancelled"
-msgstr ""
+msgstr "Бас тартылған"
 
 #. module: base
 #: view:res.config.users:0
@@ -4249,7 +4249,7 @@ msgstr ""
 #. module: base
 #: selection:res.request,priority:0
 msgid "Low"
-msgstr ""
+msgstr "Төмен"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_audit
@@ -4259,7 +4259,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.lc
 msgid "Saint Lucia"
-msgstr ""
+msgstr "Сент-Люсия"
 
 #. module: base
 #: view:publisher_warranty.contract:0
@@ -4304,14 +4304,14 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.io
 msgid "British Indian Ocean Territory"
-msgstr ""
+msgstr "Британияның Үнді мұхиттағы жері"
 
 #. module: base
 #: field:res.config.users,view:0
 #: field:res.config.view,view:0
 #: field:res.users,view:0
 msgid "Interface"
-msgstr ""
+msgstr "Интерфейс"
 
 #. module: base
 #: view:ir.actions.server:0
@@ -4342,7 +4342,7 @@ msgstr ""
 #. module: base
 #: selection:res.lang,direction:0
 msgid "Left-to-Right"
-msgstr ""
+msgstr "Солдан оңға"
 
 #. module: base
 #: view:res.lang:0
@@ -4353,14 +4353,14 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.vn
 msgid "Vietnam"
-msgstr ""
+msgstr "Вьетнам"
 
 #. module: base
 #: field:res.config.users,signature:0
 #: view:res.users:0
 #: field:res.users,signature:0
 msgid "Signature"
-msgstr ""
+msgstr "Қолтаңба"
 
 #. module: base
 #: code:addons/fields.py:456
@@ -4382,7 +4382,7 @@ msgstr ""
 #. module: base
 #: field:res.partner.category,complete_name:0
 msgid "Full Name"
-msgstr ""
+msgstr "Толық аты"
 
 #. module: base
 #: view:base.module.configuration:0
@@ -4403,7 +4403,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.mz
 msgid "Mozambique"
-msgstr ""
+msgstr "Мозамбик"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_project_long_term
@@ -4416,7 +4416,7 @@ msgstr ""
 #: field:partner.wizard.spam,text:0
 #: field:res.log,name:0
 msgid "Message"
-msgstr ""
+msgstr "Хат"
 
 #. module: base
 #: field:ir.actions.act_window.view,multi:0
@@ -4433,7 +4433,7 @@ msgstr ""
 #: field:res.partner,address:0
 #: view:res.partner.address:0
 msgid "Contacts"
-msgstr ""
+msgstr "Контакттар"
 
 #. module: base
 #: code:addons/orm.py:3199
@@ -4445,7 +4445,7 @@ msgstr ""
 #. module: base
 #: view:res.widget.wizard:0
 msgid "Add"
-msgstr ""
+msgstr "Қосу"
 
 #. module: base
 #: view:base.module.upgrade:0
@@ -4457,12 +4457,12 @@ msgstr ""
 #. module: base
 #: view:res.widget:0
 msgid "Widgets"
-msgstr ""
+msgstr "Виджеттер"
 
 #. module: base
 #: model:res.country,name:base.cz
 msgid "Czech Republic"
-msgstr ""
+msgstr "Чехия"
 
 #. module: base
 #: view:res.widget.wizard:0
@@ -4494,7 +4494,7 @@ msgstr ""
 #. module: base
 #: selection:ir.property,type:0
 msgid "Integer"
-msgstr ""
+msgstr "Бүтін сан"
 
 #. module: base
 #: help:ir.actions.report.xml,report_rml:0
