--- a/bin/addons/base/i18n/zh_TW.po
+++ b/bin/addons/base/i18n/zh_TW.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.0\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-01-27 04:40+0000\n"
+"PO-Revision-Date: 2011-09-27 04:10+0000\n"
 "Last-Translator: Walter Cheuk <wwycheuk@gmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-09-15 05:18+0000\n"
-"X-Generator: Launchpad (build 13921)\n"
+"X-Launchpad-Export-Date: 2011-09-27 04:59+0000\n"
+"X-Generator: Launchpad (build 14028)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -502,7 +502,7 @@ msgstr "模型說明"
 #: help:ir.actions.act_window,src_model:0
 msgid ""
 "Optional model name of the objects on which this action should be visible"
-msgstr ""
+msgstr "動作要可見的物件的型號名稱（可有可無）"
 
 #. module: base
 #: field:workflow.transition,trigger_expr_id:0
@@ -548,7 +548,7 @@ msgstr "是否檢查 Ean？ "
 #. module: base
 #: field:ir.values,key2:0
 msgid "Event Type"
-msgstr "事件類型"
+msgstr "活動類型"
 
 #. module: base
 #: view:base.language.export:0
@@ -1120,7 +1120,7 @@ msgstr "報表"
 msgid ""
 "If set to true, the action will not be displayed on the right toolbar of a "
 "form view."
-msgstr "如設為是，該動作不會顯示於表單檢視右側工具欄。"
+msgstr "如設為真，該動作不會顯示於表單檢視右側工具欄。"
 
 #. module: base
 #: field:workflow,on_create:0
@@ -1239,7 +1239,7 @@ msgstr "馬爾地夫"
 #. module: base
 #: help:ir.values,res_id:0
 msgid "Keep 0 if the action must appear on all resources."
-msgstr "如果該動作要顯示於所有資源上的話請保持為「0」。"
+msgstr "如該動作要顯示於所有資源上的話請保持為「0」。"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_rule
@@ -1325,7 +1325,7 @@ msgstr "優先次序"
 #. module: base
 #: field:workflow.transition,act_from:0
 msgid "Source Activity"
-msgstr "來源活動"
+msgstr "來源地動態"
 
 #. module: base
 #: view:ir.sequence:0
@@ -1510,7 +1510,7 @@ msgstr ""
 #. module: base
 #: view:workflow.activity:0
 msgid "Workflow Activity"
-msgstr "工作流程活動"
+msgstr "工作流程動態"
 
 #. module: base
 #: view:ir.rule:0
@@ -2171,7 +2171,7 @@ msgstr "西班牙文 (DO) / Español (DO)"
 #. module: base
 #: model:ir.model,name:base.model_workflow_activity
 msgid "workflow.activity"
-msgstr "工作流程.活動"
+msgstr "工作流程.動態"
 
 #. module: base
 #: help:ir.ui.view_sc,res_id:0
@@ -2820,7 +2820,7 @@ msgstr "觸發器物件"
 #. module: base
 #: view:res.users:0
 msgid "Current Activity"
-msgstr "目前活動"
+msgstr "當前動態"
 
 #. module: base
 #: view:workflow.activity:0
@@ -3070,7 +3070,7 @@ msgstr "肯亞"
 #. module: base
 #: view:res.partner.event:0
 msgid "Event"
-msgstr "事件"
+msgstr "活動"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_custom_reports
@@ -3565,7 +3565,7 @@ msgstr "日文 / 日本語"
 msgid ""
 "Source activity. When this activity is over, the condition is tested to "
 "determine if we can start the ACT_TO activity."
-msgstr ""
+msgstr "來源地動態。當再無動態，會測試條件以決定是否開始 ACT_TO 動態。"
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_3
@@ -3872,7 +3872,7 @@ msgstr "選取要匯入之模組套件 (.zip 檔)："
 #: field:res.partner.event,name:0
 #: model:res.widget,title:base.events_widget
 msgid "Events"
-msgstr "事件"
+msgstr "活動"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_actions_url
@@ -4921,12 +4921,12 @@ msgstr ""
 #. module: base
 #: field:workflow.transition,act_to:0
 msgid "Destination Activity"
-msgstr "目的地活動"
+msgstr "目的地動態"
 
 #. module: base
 #: view:ir.values:0
 msgid "Connect Events to Actions"
-msgstr "把事件連接動作"
+msgstr "把活動關聯到行動"
 
 #. module: base
 #: model:ir.model,name:base.model_base_update_translations
@@ -5041,7 +5041,7 @@ msgstr "網頁圖示影像"
 #. module: base
 #: view:ir.values:0
 msgid "Values for Event Type"
-msgstr "事件類型值"
+msgstr "活動類型值"
 
 #. module: base
 #: selection:ir.model.fields,select_level:0
@@ -6358,7 +6358,7 @@ msgstr "模組更新結果"
 #: view:workflow.activity:0
 #: field:workflow.workitem,act_id:0
 msgid "Activity"
-msgstr "活動"
+msgstr "動態"
 
 #. module: base
 #: view:res.partner:0
@@ -8128,7 +8128,7 @@ msgstr "土耳其文 / Türkçe"
 #: view:workflow:0
 #: field:workflow,activities:0
 msgid "Activities"
-msgstr "活動"
+msgstr "動態"
 
 #. module: base
 #: field:ir.actions.act_window,auto_refresh:0
@@ -8166,7 +8166,7 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_event_association
 #: model:ir.ui.menu,name:base.menu_event_main
 msgid "Events Organisation"
-msgstr "事件組織"
+msgstr "活動組織"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.ir_sequence_actions
@@ -8247,7 +8247,7 @@ msgstr "添加公司 RML 頁首與否"
 #. module: base
 #: help:workflow.transition,act_to:0
 msgid "The destination activity."
-msgstr "目的地活地。"
+msgstr "目的地動態。"
 
 #. module: base
 #: view:base.module.update:0
@@ -8307,7 +8307,7 @@ msgstr "額外資訊"
 #: model:ir.actions.act_window,name:base.act_values_form_action
 #: model:ir.ui.menu,name:base.menu_values_form_action
 msgid "Client Events"
-msgstr "客戶端事件"
+msgstr "客戶活動"
 
 #. module: base
 #: view:ir.module.module:0
@@ -8429,7 +8429,7 @@ msgstr "關聯欄位"
 #. module: base
 #: view:res.partner.event:0
 msgid "Event Logs"
-msgstr "事件日誌"
+msgstr "活動日誌"
 
 #. module: base
 #: code:addons/base/module/wizard/base_module_configuration.py:37
