--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-09-25 09:57+0000\n"
+"PO-Revision-Date: 2011-09-30 10:04+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-09-26 04:53+0000\n"
-"X-Generator: Launchpad (build 14012)\n"
+"X-Launchpad-Export-Date: 2011-10-01 05:21+0000\n"
+"X-Generator: Launchpad (build 14071)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -4527,12 +4527,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.na
 msgid "Namibia"
-msgstr ""
+msgstr "Намибия"
 
 #. module: base
 #: model:res.country,name:base.mn
 msgid "Mongolia"
-msgstr ""
+msgstr "Монғолия"
 
 #. module: base
 #: view:ir.module.module:0
@@ -4547,7 +4547,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.bi
 msgid "Burundi"
-msgstr ""
+msgstr "Бурунди"
 
 #. module: base
 #: view:base.language.install:0
@@ -4558,7 +4558,7 @@ msgstr ""
 #: wizard_button:server.action.create,init,end:0
 #: wizard_button:server.action.create,step_1,end:0
 msgid "Close"
-msgstr ""
+msgstr "Жабу"
 
 #. module: base
 #: selection:base.language.install,lang:0
