--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-01 10:05+0000\n"
+"PO-Revision-Date: 2011-10-03 03:59+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-02 05:14+0000\n"
+"X-Launchpad-Export-Date: 2011-10-03 04:46+0000\n"
 "X-Generator: Launchpad (build 14071)\n"
 
 #. module: base
@@ -4737,12 +4737,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ca
 msgid "Canada"
-msgstr ""
+msgstr "Канада"
 
 #. module: base
 #: selection:ir.module.module.dependency,state:0
 msgid "Unknown"
-msgstr ""
+msgstr "Беймәлім"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_res_users_my
@@ -4763,17 +4763,17 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.cm
 msgid "Cameroon"
-msgstr ""
+msgstr "Камерун"
 
 #. module: base
 #: model:res.country,name:base.bf
 msgid "Burkina Faso"
-msgstr ""
+msgstr "Буркина-Фасо"
 
 #. module: base
 #: selection:ir.actions.todo,state:0
 msgid "Skipped"
-msgstr ""
+msgstr "Қалдырып кетекен"
 
 #. module: base
 #: selection:ir.model.fields,state:0
@@ -4788,7 +4788,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.cc
 msgid "Cocos (Keeling) Islands"
-msgstr ""
+msgstr "Кокос (Килинг) аралдары"
 
 #. module: base
 #: selection:base.language.install,state:0
@@ -4840,7 +4840,7 @@ msgstr ""
 #. module: base
 #: field:ir.module.module,maintainer:0
 msgid "Maintainer"
-msgstr ""
+msgstr "Желілдірушісі"
 
 #. module: base
 #: field:ir.sequence,suffix:0
@@ -4855,7 +4855,7 @@ msgstr ""
 #. module: base
 #: model:ir.actions.report.xml,name:base.res_partner_address_report
 msgid "Labels"
-msgstr ""
+msgstr "Жарлықтар"
 
 #. module: base
 #: field:partner.wizard.spam,email_from:0
@@ -4935,7 +4935,7 @@ msgstr ""
 #: selection:res.partner.title,domain:0
 #: view:res.users:0
 msgid "Contact"
-msgstr ""
+msgstr "Контакты"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_ui_menu
@@ -4945,7 +4945,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.us
 msgid "United States"
-msgstr ""
+msgstr "АҚШ"
 
 #. module: base
 #: view:ir.module.module:0
@@ -4957,7 +4957,7 @@ msgstr ""
 #: view:res.partner:0
 #: view:res.partner.address:0
 msgid "Communication"
-msgstr ""
+msgstr "Байланыс"
 
 #. module: base
 #: view:ir.actions.report.xml:0
@@ -4978,12 +4978,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.kw
 msgid "Kuwait"
-msgstr ""
+msgstr "Кувейт"
 
 #. module: base
 #: field:workflow.workitem,inst_id:0
 msgid "Instance"
-msgstr ""
+msgstr "Данасы"
 
 #. module: base
 #: help:ir.actions.report.xml,attachment:0
@@ -5001,7 +5001,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ng
 msgid "Nigeria"
-msgstr ""
+msgstr "Нигерия"
 
 #. module: base
 #: code:addons/base/ir/ir_model.py:250
@@ -5037,7 +5037,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.hk
 msgid "Hong Kong"
-msgstr ""
+msgstr "Гонконг"
 
 #. module: base
 #: help:ir.actions.server,name:0
@@ -5059,12 +5059,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ph
 msgid "Philippines"
-msgstr ""
+msgstr "Филиппин"
 
 #. module: base
 #: model:res.country,name:base.ma
 msgid "Morocco"
-msgstr ""
+msgstr "Марокко"
 
 #. module: base
 #: view:res.lang:0
@@ -5074,7 +5074,7 @@ msgstr ""
 #. module: base
 #: field:res.widget,content:0
 msgid "Content"
-msgstr ""
+msgstr "Мазмұны"
 
 #. module: base
 #: help:ir.rule,global:0
@@ -5084,7 +5084,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.td
 msgid "Chad"
-msgstr ""
+msgstr "Чад"
 
 #. module: base
 #: model:ir.model,name:base.model_workflow_transition
@@ -5109,7 +5109,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.dm
 msgid "Dominica"
-msgstr ""
+msgstr "Доминика"
 
 #. module: base
 #: sql_constraint:publisher_warranty.contract:0
@@ -5131,7 +5131,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.np
 msgid "Nepal"
-msgstr ""
+msgstr "Непал"
 
 #. module: base
 #: code:addons/orm.py:2307
@@ -5196,7 +5196,7 @@ msgstr ""
 #. module: base
 #: view:ir.actions.configuration.wizard:0
 msgid "Continue"
-msgstr ""
+msgstr "Жалғастыру"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -5222,7 +5222,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.bv
 msgid "Bouvet Island"
-msgstr ""
+msgstr "Буве аралдары"
 
 #. module: base
 #: field:ir.attachment,name:0
