--- a/bin/addons/base/i18n/fr.po
+++ b/bin/addons/base/i18n/fr.po
@@ -7,13 +7,13 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-01 08:16+0000\n"
+"PO-Revision-Date: 2011-10-03 20:35+0000\n"
 "Last-Translator: t.o <Unknown>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-02 05:14+0000\n"
+"X-Launchpad-Export-Date: 2011-10-04 05:10+0000\n"
 "X-Generator: Launchpad (build 14071)\n"
 
 #. module: base
@@ -590,7 +590,7 @@ msgstr ""
 #. module: base
 #: field:res.partner,title:0
 msgid "Partner Form"
-msgstr "Statut juridique"
+msgstr "Forme juridique"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -7159,7 +7159,7 @@ msgstr "Filtre"
 #. module: base
 #: model:res.partner.title,shortcut:base.res_partner_title_madam
 msgid "Ms."
-msgstr "Mme"
+msgstr "Mlle"
 
 #. module: base
 #: model:res.country,name:base.ch
