--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-03 03:59+0000\n"
+"PO-Revision-Date: 2011-10-04 04:30+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-03 04:46+0000\n"
+"X-Launchpad-Export-Date: 2011-10-04 05:10+0000\n"
 "X-Generator: Launchpad (build 14071)\n"
 
 #. module: base
@@ -5233,12 +5233,12 @@ msgstr ""
 #: field:base.language.export,data:0
 #: field:base.language.import,data:0
 msgid "File"
-msgstr ""
+msgstr "Файл"
 
 #. module: base
 #: view:res.config.users:0
 msgid "Add User"
-msgstr ""
+msgstr "Пайдаланушыны қосу"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_view_base_module_upgrade_install
@@ -5274,7 +5274,7 @@ msgstr ""
 #: view:base.language.import:0
 #: view:wizard.ir.model.menu.create:0
 msgid "_Close"
-msgstr ""
+msgstr "_Жабу"
 
 #. module: base
 #: field:multi_company.default,company_dest_id:0
@@ -5300,7 +5300,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.as
 msgid "American Samoa"
-msgstr ""
+msgstr "Шығыс Самоа"
 
 #. module: base
 #: help:ir.actions.act_window,res_model:0
@@ -5327,7 +5327,7 @@ msgstr ""
 #: selection:ir.attachment,type:0
 #: field:ir.module.module,url:0
 msgid "URL"
-msgstr ""
+msgstr "URL-адресі"
 
 #. module: base
 #: help:res.country,name:0
@@ -5349,7 +5349,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ae
 msgid "United Arab Emirates"
-msgstr ""
+msgstr "Біріккен Араб Әмірліктері"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_crm_case_job_req_main
@@ -5373,17 +5373,17 @@ msgstr ""
 #: view:ir.rule:0
 #: field:ir.rule,global:0
 msgid "Global"
-msgstr ""
+msgstr "Жалпы-жүйелік"
 
 #. module: base
 #: model:res.country,name:base.mp
 msgid "Northern Mariana Islands"
-msgstr ""
+msgstr "Солтүстік Мариана ар-ы"
 
 #. module: base
 #: model:res.country,name:base.sb
 msgid "Solomon Islands"
-msgstr ""
+msgstr "Соломон аралдары"
 
 #. module: base
 #: code:addons/base/ir/ir_model.py:490
@@ -5399,7 +5399,7 @@ msgstr ""
 #. module: base
 #: view:res.request:0
 msgid "Waiting"
-msgstr ""
+msgstr "Күту"
 
 #. module: base
 #: code:addons/__init__.py:834
@@ -5421,13 +5421,13 @@ msgstr ""
 #. module: base
 #: field:res.log,create_date:0
 msgid "Creation Date"
-msgstr ""
+msgstr "Жасалған күні"
 
 #. module: base
 #: view:ir.translation:0
 #: model:ir.ui.menu,name:base.menu_translation
 msgid "Translations"
-msgstr ""
+msgstr "Аудармалар"
 
 #. module: base
 #: field:ir.sequence,padding:0
@@ -5437,17 +5437,17 @@ msgstr ""
 #. module: base
 #: view:ir.actions.report.xml:0
 msgid "Report"
-msgstr ""
+msgstr "Есеп"
 
 #. module: base
 #: model:res.country,name:base.ua
 msgid "Ukraine"
-msgstr ""
+msgstr "Украина"
 
 #. module: base
 #: model:res.country,name:base.to
 msgid "Tonga"
-msgstr ""
+msgstr "Тонга"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_module_category
@@ -5458,7 +5458,7 @@ msgstr ""
 #. module: base
 #: view:partner.wizard.ean.check:0
 msgid "Ignore"
-msgstr ""
+msgstr "Елемеу"
 
 #. module: base
 #: report:ir.module.reference.graph:0
@@ -5473,7 +5473,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.ml
 msgid "Mali"
-msgstr ""
+msgstr "Мали"
 
 #. module: base
 #: help:res.config.users,email:0
@@ -5498,7 +5498,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.tk
 msgid "Tokelau"
-msgstr ""
+msgstr "Токелау"
 
 #. module: base
 #: field:ir.actions.report.xml,report_xsl:0
@@ -5508,7 +5508,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.bn
 msgid "Brunei Darussalam"
-msgstr ""
+msgstr "Бруней Даруссалам"
 
 #. module: base
 #: view:ir.actions.act_window:0
@@ -5517,12 +5517,12 @@ msgstr ""
 #: field:ir.ui.view,type:0
 #: field:wizard.ir.model.menu.create.line,view_type:0
 msgid "View Type"
-msgstr ""
+msgstr "Көрініс түрі"
 
 #. module: base
 #: model:ir.ui.menu,name:base.next_id_2
 msgid "User Interface"
-msgstr ""
+msgstr "Пайдаланушы интерфейсі"
 
 #. module: base
 #: field:ir.attachment,create_date:0
@@ -5543,12 +5543,12 @@ msgstr ""
 #. module: base
 #: view:ir.actions.act_window:0
 msgid "General Settings"
-msgstr ""
+msgstr "Жалпы баптаулар"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_administration_shortcut
 msgid "Custom Shortcuts"
-msgstr ""
+msgstr "Өзінің тіркесімдері"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -5558,12 +5558,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.dz
 msgid "Algeria"
-msgstr ""
+msgstr "Алжир"
 
 #. module: base
 #: model:res.country,name:base.be
 msgid "Belgium"
-msgstr ""
+msgstr "Бельгия"
 
 #. module: base
 #: model:ir.model,name:base.model_osv_memory_autovacuum
@@ -5579,12 +5579,12 @@ msgstr ""
 #: field:res.partner,lang:0
 #: field:res.users,context_lang:0
 msgid "Language"
-msgstr ""
+msgstr "Тіл"
 
 #. module: base
 #: model:res.country,name:base.gm
 msgid "Gambia"
-msgstr ""
+msgstr "Гамбия"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.action_res_company_form
@@ -5656,7 +5656,7 @@ msgstr ""
 #: view:publisher_warranty.contract.wizard:0
 #: view:res.widget.wizard:0
 msgid "Cancel"
-msgstr ""
+msgstr "Бас тарту"
 
 #. module: base
 #: selection:base.language.export,format:0
@@ -5666,7 +5666,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.nt
 msgid "Neutral Zone"
-msgstr ""
+msgstr "Нейтралды аймақ"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -5676,12 +5676,12 @@ msgstr ""
 #. module: base
 #: view:ir.model:0
 msgid "Custom"
-msgstr ""
+msgstr "Өзгеше"
 
 #. module: base
 #: view:res.request:0
 msgid "Current"
-msgstr ""
+msgstr "Қазіргісі"
 
 #. module: base
 #: model:res.partner.category,name:base.res_partner_category_9
@@ -5697,7 +5697,7 @@ msgstr ""
 #: field:res.groups,users:0
 #: view:res.users:0
 msgid "Users"
-msgstr ""
+msgstr "Пайдаланушылар"
 
 #. module: base
 #: field:ir.module.module,published_version:0
