--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-05 03:54+0000\n"
+"PO-Revision-Date: 2011-10-05 09:54+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-05 04:55+0000\n"
+"X-Launchpad-Export-Date: 2011-10-06 04:48+0000\n"
 "X-Generator: Launchpad (build 14085)\n"
 
 #. module: base
@@ -5971,7 +5971,7 @@ msgstr ""
 #. module: base
 #: wizard_button:server.action.create,step_1,create:0
 msgid "Create"
-msgstr ""
+msgstr "Құру"
 
 #. module: base
 #: view:ir.sequence:0
@@ -5986,7 +5986,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.fr
 msgid "France"
-msgstr ""
+msgstr "Франция"
 
 #. module: base
 #: model:ir.model,name:base.model_res_log
@@ -6008,7 +6008,7 @@ msgstr ""
 #. module: base
 #: selection:ir.cron,interval_type:0
 msgid "Weeks"
-msgstr ""
+msgstr "апта"
 
 #. module: base
 #: model:res.country,name:base.af
@@ -6047,7 +6047,7 @@ msgstr ""
 #: field:res.bank,fax:0
 #: field:res.partner.address,fax:0
 msgid "Fax"
-msgstr ""
+msgstr "Факс"
 
 #. module: base
 #: field:res.lang,thousands_sep:0
@@ -6094,7 +6094,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.pa
 msgid "Panama"
-msgstr ""
+msgstr "Панама"
 
 #. module: base
 #: model:res.partner.title,name:base.res_partner_title_ltd
@@ -6116,7 +6116,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.gi
 msgid "Gibraltar"
-msgstr ""
+msgstr "Гибралтар"
 
 #. module: base
 #: field:ir.actions.report.xml,report_name:0
@@ -6126,7 +6126,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.pn
 msgid "Pitcairn Island"
-msgstr ""
+msgstr "Питкэрн ар-ы"
 
 #. module: base
 #: view:base.module.upgrade:0
@@ -6144,7 +6144,7 @@ msgstr ""
 #: field:res.config.users,name:0
 #: field:res.users,name:0
 msgid "User Name"
-msgstr ""
+msgstr "Пайдаланушы аты"
 
 #. module: base
 #: view:ir.sequence:0
@@ -6156,7 +6156,7 @@ msgstr ""
 #: view:ir.model.fields:0
 #: view:workflow.activity:0
 msgid "Properties"
-msgstr ""
+msgstr "Баптаулар"
 
 #. module: base
 #: help:ir.sequence,padding:0
@@ -6173,7 +6173,7 @@ msgstr ""
 #. module: base
 #: selection:ir.cron,interval_type:0
 msgid "Months"
-msgstr ""
+msgstr "Айлары"
 
 #. module: base
 #: field:ir.actions.act_window,search_view:0
@@ -6191,7 +6191,7 @@ msgstr ""
 #: view:ir.attachment:0
 #: model:ir.ui.menu,name:base.menu_action_attachment
 msgid "Attachments"
-msgstr ""
+msgstr "Тіркемелер"
 
 #. module: base
 #: model:ir.ui.menu,name:base.menu_base_partner
@@ -6209,12 +6209,12 @@ msgstr ""
 #: selection:ir.actions.todo,state:0
 #: view:res.config.users:0
 msgid "Done"
-msgstr ""
+msgstr "Бітті"
 
 #. module: base
 #: model:res.partner.title,name:base.res_partner_title_miss
 msgid "Miss"
-msgstr ""
+msgstr "мис."
 
 #. module: base
 #: view:ir.model.access:0
