--- a/bin/addons/base/i18n/kk.po
+++ b/bin/addons/base/i18n/kk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: openobject-server\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-10-05 09:54+0000\n"
+"PO-Revision-Date: 2011-10-06 11:45+0000\n"
 "Last-Translator: arruah <Unknown>\n"
 "Language-Team: Kazakh <kk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-10-06 04:48+0000\n"
+"X-Launchpad-Export-Date: 2011-10-07 05:04+0000\n"
 "X-Generator: Launchpad (build 14085)\n"
 
 #. module: base
@@ -6234,23 +6234,23 @@ msgstr ""
 #: field:res.partner.address,city:0
 #: field:res.partner.bank,city:0
 msgid "City"
-msgstr ""
+msgstr "Қала"
 
 #. module: base
 #: model:res.country,name:base.qa
 msgid "Qatar"
-msgstr ""
+msgstr "Катар"
 
 #. module: base
 #: model:res.country,name:base.it
 msgid "Italy"
-msgstr ""
+msgstr "Италия"
 
 #. module: base
 #: view:ir.actions.todo:0
 #: selection:ir.actions.todo,state:0
 msgid "To Do"
-msgstr ""
+msgstr "Тапсырма"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -6262,7 +6262,7 @@ msgstr ""
 #: field:res.partner,email:0
 #: field:res.users,email:0
 msgid "E-mail"
-msgstr ""
+msgstr "Электрондық пошта"
 
 #. module: base
 #: selection:ir.module.module,license:0
@@ -6313,12 +6313,12 @@ msgstr ""
 #: view:res.users:0
 #: field:res.users,address_id:0
 msgid "Address"
-msgstr ""
+msgstr "Адресі"
 
 #. module: base
 #: field:ir.module.module,latest_version:0
 msgid "Installed version"
-msgstr ""
+msgstr "Орнатылған нұсқа"
 
 #. module: base
 #: selection:base.language.install,lang:0
@@ -6328,7 +6328,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.mr
 msgid "Mauritania"
-msgstr ""
+msgstr "Мавритания"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_translation
@@ -6344,13 +6344,13 @@ msgstr ""
 #: view:workflow.activity:0
 #: field:workflow.workitem,act_id:0
 msgid "Activity"
-msgstr ""
+msgstr "Ісі"
 
 #. module: base
 #: view:res.partner:0
 #: view:res.partner.address:0
 msgid "Postal Address"
-msgstr ""
+msgstr "Пошта адресі"
 
 #. module: base
 #: field:res.company,parent_id:0
@@ -6365,17 +6365,17 @@ msgstr ""
 #. module: base
 #: field:res.currency.rate,rate:0
 msgid "Rate"
-msgstr ""
+msgstr "Дәрежесі"
 
 #. module: base
 #: model:res.country,name:base.cg
 msgid "Congo"
-msgstr ""
+msgstr "Конго"
 
 #. module: base
 #: view:res.lang:0
 msgid "Examples"
-msgstr ""
+msgstr "Мысалдар"
 
 #. module: base
 #: field:ir.default,value:0
@@ -6385,7 +6385,7 @@ msgstr ""
 #. module: base
 #: model:ir.ui.menu,name:base.menu_tools
 msgid "Tools"
-msgstr ""
+msgstr "Құралдар"
 
 #. module: base
 #: model:res.country,name:base.kn
@@ -6413,7 +6413,7 @@ msgstr ""
 #: field:ir.model.fields,model:0
 #: field:ir.values,model:0
 msgid "Object Name"
-msgstr ""
+msgstr "Нысанның атауы"
 
 #. module: base
 #: help:ir.actions.server,srcmodel_id:0
@@ -6427,7 +6427,7 @@ msgstr ""
 #: selection:ir.module.module,state:0
 #: selection:ir.module.module.dependency,state:0
 msgid "Not Installed"
-msgstr ""
+msgstr "Орнатылмаған"
 
 #. module: base
 #: view:workflow.activity:0
@@ -6438,7 +6438,7 @@ msgstr ""
 #. module: base
 #: field:ir.ui.menu,icon:0
 msgid "Icon"
-msgstr ""
+msgstr "Таңбашасы"
 
 #. module: base
 #: help:ir.model.fields,model_id:0
@@ -6461,17 +6461,17 @@ msgstr ""
 #: model:ir.ui.menu,name:base.menu_resquest_ref
 #: view:res.request:0
 msgid "Requests"
-msgstr ""
+msgstr "Талаптар"
 
 #. module: base
 #: model:res.country,name:base.ye
 msgid "Yemen"
-msgstr ""
+msgstr "Йемен"
 
 #. module: base
 #: selection:workflow.activity,split_mode:0
 msgid "Or"
-msgstr ""
+msgstr "Немесе"
 
 #. module: base
 #: model:ir.actions.act_window,name:base.res_log_act_window
@@ -6482,12 +6482,12 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.al
 msgid "Albania"
-msgstr ""
+msgstr "Албания"
 
 #. module: base
 #: model:res.country,name:base.ws
 msgid "Samoa"
-msgstr ""
+msgstr "Самоа"
 
 #. module: base
 #: code:addons/base/res/res_lang.py:161
@@ -6555,14 +6555,14 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.la
 msgid "Laos"
-msgstr ""
+msgstr "Лаос"
 
 #. module: base
 #: selection:ir.actions.server,state:0
 #: field:res.config.users,user_email:0
 #: field:res.users,user_email:0
 msgid "Email"
-msgstr ""
+msgstr "Эл.поштасы"
 
 #. module: base
 #: field:res.config.users,action_id:0
@@ -6593,7 +6593,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.tg
 msgid "Togo"
-msgstr ""
+msgstr "Того"
 
 #. module: base
 #: selection:ir.module.module,license:0
@@ -6603,7 +6603,7 @@ msgstr ""
 #. module: base
 #: selection:workflow.activity,kind:0
 msgid "Stop All"
-msgstr ""
+msgstr "Барлығын тоқтату"
 
 #. module: base
 #: code:addons/orm.py:412
@@ -6624,7 +6624,7 @@ msgstr ""
 #. module: base
 #: selection:ir.model.fields,on_delete:0
 msgid "Cascade"
-msgstr ""
+msgstr "Кезектеп"
 
 #. module: base
 #: field:workflow.transition,group_id:0
@@ -6639,12 +6639,12 @@ msgstr ""
 #. module: base
 #: field:res.groups,comment:0
 msgid "Comment"
-msgstr ""
+msgstr "Түсініктеме"
 
 #. module: base
 #: model:res.country,name:base.ro
 msgid "Romania"
-msgstr ""
+msgstr "Румыния"
 
 #. module: base
 #: help:ir.cron,doall:0
@@ -6678,7 +6678,7 @@ msgstr ""
 #: field:res.config.users,context_tz:0
 #: field:res.users,context_tz:0
 msgid "Timezone"
-msgstr ""
+msgstr "Уақыт белдеуі"
 
 #. module: base
 #: model:ir.model,name:base.model_ir_actions_report_xml
@@ -6731,7 +6731,7 @@ msgstr ""
 #. module: base
 #: model:res.country,name:base.by
 msgid "Belarus"
-msgstr ""
+msgstr "Белорусь"
 
 #. module: base
 #: field:ir.actions.act_window,name:0
@@ -6741,7 +6741,7 @@ msgstr ""
 #: field:ir.actions.url,name:0
 #: field:ir.filters,name:0
 msgid "Action Name"
-msgstr ""
+msgstr "Әрекеттің атауы"
 
 #. module: base
 #: model:ir.actions.act_window,help:base.action_res_users
@@ -6755,7 +6755,7 @@ msgstr ""
 #. module: base
 #: selection:res.request,priority:0
 msgid "Normal"
-msgstr ""
+msgstr "Қәдімгі"
 
 #. module: base
 #: field:res.bank,street2:0
