--- a/bin/addons/base/i18n/ar.po
+++ b/bin/addons/base/i18n/ar.po
@@ -7,14 +7,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-11-09 05:51+0000\n"
+"PO-Revision-Date: 2011-11-15 01:25+0000\n"
 "Last-Translator: kifcaliph <kifcaliph@hotmail.com>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-10 05:17+0000\n"
-"X-Generator: Launchpad (build 14263)\n"
+"X-Launchpad-Export-Date: 2011-11-15 05:17+0000\n"
+"X-Generator: Launchpad (build 14291)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -8712,7 +8712,7 @@ msgstr ""
 #. module: base
 #: field:ir.rule,perm_create:0
 msgid "Apply For Create"
-msgstr ""
+msgstr "تنفيذ للإنشاء"
 
 #. module: base
 #: model:res.country,name:base.vi
