--- a/bin/addons/base/i18n/de.po
+++ b/bin/addons/base/i18n/de.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: OpenERP Server 5.0.4\n"
 "Report-Msgid-Bugs-To: support@openerp.com\n"
 "POT-Creation-Date: 2011-01-11 11:14+0000\n"
-"PO-Revision-Date: 2011-11-29 06:59+0000\n"
-"Last-Translator: mniess <mniess@gmail.com>\n"
+"PO-Revision-Date: 2011-12-13 21:24+0000\n"
+"Last-Translator: Ferdinand @ Camptocamp <Unknown>\n"
 "Language-Team: German <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-11-30 05:47+0000\n"
-"X-Generator: Launchpad (build 14404)\n"
+"X-Launchpad-Export-Date: 2011-12-14 05:29+0000\n"
+"X-Generator: Launchpad (build 14487)\n"
 
 #. module: base
 #: view:ir.filters:0
@@ -9150,7 +9150,7 @@ msgstr "Betreuung nach Verkauf"
 #. module: base
 #: view:ir.actions.todo:0
 msgid "Launch"
-msgstr "Einführung"
+msgstr "Ausführen"
 
 #. module: base
 #: field:ir.actions.act_window,limit:0
